Adding final changes in Js code

--- a/views/sobre.html
+++ b/views/sobre.html
@@ -134,7 +134,7 @@
                     de qualidade aos alunos.</p>
                 </div>
               </div>
-              <a class="btn btn-primary leia" data-toggle="collapse" href="#multiCollapseExample2" role="button"
+              <a class="btn btn-primary leia" id="need2" data-toggle="collapse" href="#multiCollapseExample2" role="button"
                 aria-expanded="false" aria-controls="multiCollapseExample2">Ler mais</a>
               <a class="btn btn-primary saiba" href="https://www.sumicity.com.br/" target="blank" role="button">Saiba
                 mais</a>
@@ -154,7 +154,7 @@
                     da tecnologia.</p>
                 </div>
               </div>
-              <a class="btn btn-primary leia"data-toggle="collapse" href="#multiCollapseExample3" role="button"
+              <a class="btn btn-primary leia" id="need3" data-toggle="collapse" href="#multiCollapseExample3" role="button"
                 aria-expanded="false" aria-controls="multiCollapseExample3">Ler mais</a>
               <a class="btn btn-primary saiba" href="https://www.alura.com.br/" target="blank" role="button">Saiba
                 mais</a>
@@ -175,7 +175,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/31a2144e07.js" crossorigin="anonymous"></script>
     <script src="../js/base.js"></script>
-    <script src="../js/change.js"></script>
+    <script src="../js/change-sobre.js"></script>
 </body>
 
 </html>
